--- a/client/set-timer/set-timer.html
+++ b/client/set-timer/set-timer.html
@@ -1,5 +1,6 @@
 <template name='selfTimer'>
-  <input type="text" class="intime" placeholder="launch in ____ minutes">
-  <input type="text" class="attime" placeholder="meet at time">
+  <input type="text" data-field="time" data-view="Dropdown" readonly class="intime" placeholder="have lunch in ...">
+  <input type="text" data-field="time" class="attime" readonly placeholder="have lunch at...">
+  <div id="dtBox"></div>
   <button class="deploy">DEPLOY</button>
 </template>
